# Vizual

./: .dockerignore  .gcloudignore  .gitignore  .replit  .vercelignore  ACCOUNT_MANAGEMENT_COMPLETE.md  ADMIN_DASHBOARD_SETUP.md  CLOUD_RUN_ENV_VARS.txt  CLOUD_RUN_SETUP.md  CLOUD_RUN_UPDATE_INSTRUCTIONS.md  COMMAND_HUB_COMPLETE.md  CTO_HANDOVER_GUIDE.md  CURRENT_SITUATION_REPORT.md  DEEPSEARCH_COMPLETE.md  DEEPSEARCH_SETUP.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_COMPLETE.md  Dockerfile  GOOGLE_AUTH_SETUP.md  LAYOUT_FIXES.md  MEDIA_STUDIO_REDESIGN.md  Procfile  RAG_FINAL_STRUCTURE.md  RAG_QUICK_REFERENCE.md  README.md  REMOVED_AI_SDK.md  SETUP_CHECKLIST.md  SETUP_DATABASE_NOW.md  SETUP_USAGE_TRACKING.md  SKYVERN_INTEGRATION_SUMMARY.md  SKYVERN_QUICK_REFERENCE.md  SKYVERN_SETUP_GUIDE.md  SUBSCRIPTION_COMPLETE.md  SUBSCRIPTION_IMPLEMENTATION.md  SUBSCRIPTION_SETUP_GUIDE.md  TAVILY_SETUP.md  TECH_STACK.md  VERCEL_AI_SDK_MIGRATION.md  VERTEX_RAG_SETUP.md  app.py  (+43 more)
api/: ai-web-task.ts  chat.ts  check-usage.ts  create-checkout-session.ts  deep-search.ts  generate-image.js  generate-image.ts  increment-usage.ts  package-lock.json  package.json  pdf-extraction.d.ts  process-document.ts  rag-search.ts  sentry.ts  stripe-webhook.ts  upload-document.ts  usage.ts  web-search.ts
app/: critical.css  globals.css  layout.tsx  opengraph-image.tsx  page.tsx  robots.ts  sitemap.ts
attached_assets/: Pasted--svg-xmlns-http-www-w3-org-2000-svg-viewBox-0-0-375-800-Background-rect-width-1741478409542.txt  (+4 more)
components/: MetallicPaint.tsx
context/: auth-context.tsx  guest-mode-context.tsx
(+233 files in other folders)
