[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "email-validator>=2.2.0",
    "flask-login>=0.6.3",
    "flask>=3.1.0",
    "flask-sqlalchemy>=3.1.1",
    "gunicorn>=23.0.0",
    "psycopg2-binary>=2.9.10",
    "flask-wtf>=1.2.2",
    "openai>=1.61.1",
    "stripe>=11.5.0",
    "sqlalchemy>=2.0.38",
    "werkzeug>=3.1.3",
    "poe-api>=0.5.3",
    "oauthlib>=3.2.2",
    "trafilatura>=2.0.0",
    "beautifulsoup4>=4.13.3",
    "python-docx>=1.1.2",
    "pypdf2>=3.0.1",
    "python-magic>=0.4.27",
]
